generate synthetic property listings

--- a/AI-real-estate-agent.ipynb
+++ b/AI-real-estate-agent.ipynb
@@ -5,12 +5,7 @@
    "id": "69023cc0-23c3-491b-bb62-83d6460cd26a",
    "metadata": {},
    "source": [
-    "# The project showcase an AI real estate agent built by state of the art LLM tools\n",
-    "## Step 1: Use OpenAI GPT-3.5-Turbo to generate listings of properties\n",
-    "## Step 2: Store listings in a vector database\n",
-    "## Step 3: Build a user interface to collect buyer preferences\n",
-    "## Step 4: Search listings based on buyer's preference\n",
-    "## Step 5: Alter the retrieved listing's description with the buyer's preferences"
+    "# The project showcase an AI real estate agent built by state of the art LLM tools"
    ]
   },
   {
@@ -18,54 +13,47 @@
    "id": "3471badf-96a5-4f25-b901-9950813c6238",
    "metadata": {},
    "source": [
-    "# Step 1: Use OpenAI GPT-3.5-Turbo to generate listings of properties"
+    "## Step 1: Use OpenAI GPT-3.5-Turbo to generate listings of properties"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "18347053-7510-4a10-887c-d04f45bcfb73",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import random\n",
     "from openai import OpenAI\n",
     "\n",
     "with open('openai_api_key.txt', 'r') as file:\n",
     "    openai_api_key = file.read()\n",
     "\n",
     "prompt = \"\"\"\n",
-    "You are a real estate agent.\n",
-    "Generate a description for a property listed for sale, the property type can be single family house, apartment, condo, or mansion.\n",
-    "The description must include the following information:\n",
-    "Neighborhood:\n",
-    "Property Type:\n",
+    "You are a real estate agent, there are many properties on the market for sale, including condo, apartment, house, ranch, mansion, and farmland.\n",
+    "The listing must include: neighborhood name, property type, price, size, number of bedrooms, number of bathrooms, description, neighborhood description.\n",
+    "Use the following format:\n",
+    "\n",
+    "Neighborhood name:\n",
+    "Property type:\n",
     "Price:\n",
+    "Size:\n",
     "Number of bedrooms:\n",
     "Number of bathrooms:\n",
-    "House size:\n",
-    "Short Description:\n",
+    "Description:\n",
     "Neighborhood Description:\n",
     "\n",
-    "***Here is an example:***\n",
-    "Neighborhood: Green Oaks\n",
-    "Property Type: Single family house\n",
-    "Price: $800,000\n",
-    "Bedrooms: 3\n",
-    "Bathrooms: 2\n",
-    "House Size: 2,000 sqft\n",
-    "Description: Welcome to this eco-friendly oasis nestled in the heart of Green Oaks. This charming 3-bedroom, 2-bathroom home boasts energy-efficient features such as solar panels and a well-insulated structure. Natural light floods the living spaces, highlighting the beautiful hardwood floors and eco-conscious finishes. The open-concept kitchen and dining area lead to a spacious backyard with a vegetable garden, perfect for the eco-conscious family. Embrace sustainable living without compromising on style in this Green Oaks gem.\n",
-    "Neighborhood Description: Green Oaks is a close-knit, environmentally-conscious community with access to organic grocery stores, community gardens, and bike paths. Take a stroll through the nearby Green Oaks Park or grab a cup of coffee at the cozy Green Bean Cafe. With easy access to public transportation and bike lanes, commuting is a breeze.\n",
-    "***end of example***\n",
-    "\n",
-    "Generate a description for a property listed for sale:\n",
+    "Generate a description for a {} listed for sale:\n",
     "\"\"\"\n",
     "\n",
-    "def generate_listing_description(openai_api_key, prompt):\n",
+    "property_types = [\"condo\", \"apartment\", \"house\", \"ranch\", \"mansion\"]\n",
+    "\n",
+    "def generate_listing_description(openai_api_key, prompt, property_type):\n",
     "    \"\"\"\n",
-    "    Reuqest response from gpt-3.5-turbo-instruct\n",
-    "    Parse the response into a list of listings\n",
+    "    Using custom prompt to generate property listings\n",
+    "    from gpt-3.5-turbo model. \n",
     "    \"\"\"\n",
     "    client = OpenAI(\n",
     "        api_key=openai_api_key,\n",
@@ -75,47 +63,246 @@
     "            messages=[\n",
     "                {\n",
     "                    \"role\": \"user\",\n",
-    "                    \"content\": prompt,\n",
+    "                    \"content\": prompt.format(property_type),\n",
     "                }\n",
     "            ],\n",
     "            model=\"gpt-3.5-turbo\",\n",
+    "            temperature = 1.0\n",
     "        )\n",
     "        return response.choices[0].message.content.strip()\n",
     "    except Exception as e:\n",
     "        print(e)\n",
     "        return \"\"\n",
     "\n",
-    "def create_vector_embedding(listings):\n",
-    "\n",
-    "    return listings_with_embedding\n",
-    "\n"
+    "def generate_listings(num_listings, openai_api_key, prompt, property_types):\n",
+    "    \"\"\"\n",
+    "    generate a number (num_listings) of listings using generate_listing_description\n",
+    "    parse the response string into a dictionary\n",
+    "    storm the listing dictionaries into a Pandas dataframe\n",
+    "    \"\"\"\n",
+    "    listings = []\n",
+    "    success = False\n",
+    "    keys = [\"neighborhood name\",\n",
+    "            \"property type\",\n",
+    "            \"price\",\n",
+    "            \"size\",\n",
+    "            \"number of bedrooms\",\n",
+    "            \"number of bathrooms\",\n",
+    "            \"description\",\n",
+    "            \"neighborhood description\"]\n",
+    "    for i in range(num_listings):\n",
+    "        property_type = random.choice(property_types)\n",
+    "        listing_str = generate_listing_description(openai_api_key, prompt, property_type).lower()\n",
+    "        listing_dict = {key: \"\" for key in keys}\n",
+    "        current_key = None\n",
+    "        for line in listing_str.split('\\n'):\n",
+    "            line_key = next((key for key in keys if line.startswith(key + \":\")), None)\n",
+    "            if line_key:\n",
+    "                current_key = line_key\n",
+    "                listing_dict[current_key] = line.split(\": \", 1)[1].strip()\n",
+    "            elif current_key:\n",
+    "                listing_dict[current_key] += \" \" + line.strip()\n",
+    "        listings.append(listing_dict)\n",
+    "    listings_df = pd.DataFrame(listings)\n",
+    "    return listings_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "d25a7705-6052-4ad2-8cf4-ae47dc852317",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Neighborhood: Bel Air Estates\n",
-      "Property Type: Mansion\n",
-      "Price: $10,000,000\n",
-      "Bedrooms: 7\n",
-      "Bathrooms: 9\n",
-      "House Size: 10,000 sqft\n",
-      "Description: Step into luxury at this breathtaking 7-bedroom, 9-bathroom mansion in the prestigious Bel Air Estates. This sprawling estate boasts high-end finishes, a grand foyer, marble flooring, and custom woodwork throughout. The gourmet kitchen features top-of-the-line appliances, perfect for hosting elegant dinner parties. With a spacious backyard, swimming pool, and outdoor kitchen, this mansion is an entertainer's dream. Relax in the master suite with a private balcony overlooking lush landscaping and city views. Live in luxury in this Bel Air masterpiece.\n",
-      "Neighborhood Description: Bel Air Estates is an exclusive and affluent neighborhood known for its lavish estates, gated communities, and celebrity residents. Enjoy privacy and security in this prestigious area, just a short drive away from upscale shopping on Rodeo Drive and fine dining on Sunset Boulevard. With easy access to the 405 freeway, residents can quickly reach Beverly Hills, Santa Monica, and other popular Los Angeles destinations.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Neighborhood name: Parkside Heights\\nProperty type: Apartment\\nPrice: $350,000\\nSize: 900 sqft\\nNumber of bedrooms: 2\\nNumber of bathrooms: 1\\nDescription: Cozy and modern apartment located in the desirable Parkside Heights neighborhood. This unit features an open floor plan, updated kitchen with stainless steel appliances, spacious bedrooms, and a private balcony with stunning views. Perfect for first-time homebuyers or investors looking for a rental property.\\nNeighborhood Description: Parkside Heights is a vibrant neighborhood known for its tree-lined streets, local cafes, and easy access to parks and public transportation. Residents enjoy a sense of community and convenience, with shopping centers and schools within walking distance.'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "response = generate_listing_description(openai_api_key, prompt)\n",
-    "print(response)"
+    "# Test generate_listing_description(openai_api_key, prompt)\n",
+    "response = generate_listing_description(openai_api_key, prompt, \"apartment\")\n",
+    "response"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9f285bb8-0225-43fa-8b11-de5ac6ee7d64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test generate_listings(num_of_listings, openai_api_key, prompt)\n",
+    "num_listings = 20\n",
+    "listings_df = generate_listings(num_listings, openai_api_key, prompt, property_types)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "282302af-70fb-430a-bbc1-d27a9d0c4bcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>neighborhood name</th>\n",
+       "      <th>property type</th>\n",
+       "      <th>price</th>\n",
+       "      <th>size</th>\n",
+       "      <th>number of bedrooms</th>\n",
+       "      <th>number of bathrooms</th>\n",
+       "      <th>description</th>\n",
+       "      <th>neighborhood description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>willow creek</td>\n",
+       "      <td>ranch</td>\n",
+       "      <td>$750,000</td>\n",
+       "      <td>10 acres</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>this charming ranch features a renovated farmh...</td>\n",
+       "      <td>willow creek is a peaceful rural community kno...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>midtown</td>\n",
+       "      <td>condo</td>\n",
+       "      <td>$500,000</td>\n",
+       "      <td>1,200 sqft</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>this modern and sleek condo in the heart of mi...</td>\n",
+       "      <td>midtown is known for its vibrant nightlife, tr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>maplewood</td>\n",
+       "      <td>apartment</td>\n",
+       "      <td>$300,000</td>\n",
+       "      <td>900 sqft</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>this charming apartment in the heart of maplew...</td>\n",
+       "      <td>maplewood is a vibrant and family-friendly nei...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>rolling hills estates</td>\n",
+       "      <td>ranch</td>\n",
+       "      <td>$1,500,000</td>\n",
+       "      <td>20 acres</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>this stunning ranch property offers 20 acres o...</td>\n",
+       "      <td>rolling hills estates is known for its picture...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>oakridge heights</td>\n",
+       "      <td>condo</td>\n",
+       "      <td>$300,000</td>\n",
+       "      <td>900 sqft</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>this cozy condo in oakridge heights offers a c...</td>\n",
+       "      <td>oakridge heights is a bustling neighborhood wi...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       neighborhood name property type       price        size  \\\n",
+       "0           willow creek         ranch    $750,000    10 acres   \n",
+       "1                midtown         condo    $500,000  1,200 sqft   \n",
+       "2              maplewood     apartment    $300,000    900 sqft   \n",
+       "3  rolling hills estates         ranch  $1,500,000    20 acres   \n",
+       "4       oakridge heights         condo    $300,000    900 sqft   \n",
+       "\n",
+       "  number of bedrooms number of bathrooms  \\\n",
+       "0                  3                   2   \n",
+       "1                  2                   2   \n",
+       "2                  2                   1   \n",
+       "3                  4                   3   \n",
+       "4                  2                   1   \n",
+       "\n",
+       "                                         description  \\\n",
+       "0  this charming ranch features a renovated farmh...   \n",
+       "1  this modern and sleek condo in the heart of mi...   \n",
+       "2  this charming apartment in the heart of maplew...   \n",
+       "3  this stunning ranch property offers 20 acres o...   \n",
+       "4  this cozy condo in oakridge heights offers a c...   \n",
+       "\n",
+       "                            neighborhood description  \n",
+       "0  willow creek is a peaceful rural community kno...  \n",
+       "1  midtown is known for its vibrant nightlife, tr...  \n",
+       "2  maplewood is a vibrant and family-friendly nei...  \n",
+       "3  rolling hills estates is known for its picture...  \n",
+       "4  oakridge heights is a bustling neighborhood wi...  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "listings_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d7811c92-3c37-4279-8f21-905f210c24f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listings_df.to_csv(\"listings.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a0b6424-342d-4152-9b2c-deed91b5b87f",
+   "metadata": {},
+   "source": [
+    "## Step 2: Create embeddings for the property"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f8809c2-8e1e-4297-9b8b-3d260b325a86",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -136,11 +323,12 @@
     "from lancedb.pydantic import vector, LanceModel\n",
     "\n",
     "class PropertyListings(LanceModel):\n",
-    "    vector: vector(7)\n",
+    "    vector: vector(embeddings.shape[1])\n",
     "    neighborhood: str\n",
+    "    property_type: str\n",
     "    price: float\n",
-    "    bedrooms: float\n",
-    "    bathrooms: float\n",
+    "    num_bedrooms: float\n",
+    "    num_bathrooms: float\n",
     "    size: float\n",
     "    discription: str\n",
     "    neighborhood_description: str\n",
@@ -150,6 +338,25 @@
     "db.drop_table(table_name, ignore_missiong=True)\n",
     "table = db.create_table(table_name, schema = PropertyListings)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddef4702-eeb6-477e-9fa0-2c43067262a6",
+   "metadata": {},
+   "source": [
+    "## Step 2: Store listings in a vector database\n",
+    "## Step 3: Build a user interface to collect buyer preferences\n",
+    "## Step 4: Search listings based on buyer's preference\n",
+    "## Step 5: Alter the retrieved listing's description with the buyer's preferences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fe9da15-81ed-4a08-b76c-8c10c0fcc4e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
