test database table search with vector query

--- a/AI-real-estate-agent.ipynb
+++ b/AI-real-estate-agent.ipynb
@@ -625,6 +625,102 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "730fb23c-61a9-4972-82f9-290cd3222c2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test database search\n",
+    "query = np.random.randn(1536)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "cd274774-d0d3-400d-a73d-9aacfef0ba9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>neighborhood_name</th>\n",
+       "      <th>property_type</th>\n",
+       "      <th>price</th>\n",
+       "      <th>size</th>\n",
+       "      <th>num_bedrooms</th>\n",
+       "      <th>num_bathrooms</th>\n",
+       "      <th>description</th>\n",
+       "      <th>neighborhood_description</th>\n",
+       "      <th>combined_description</th>\n",
+       "      <th>ada_embeddings</th>\n",
+       "      <th>_distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>willow creek</td>\n",
+       "      <td>house</td>\n",
+       "      <td>$350,000</td>\n",
+       "      <td>2,000 sq ft</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>this charming 4 bedroom, 2.5 bathroom house in...</td>\n",
+       "      <td>willow creek is a family-friendly neighborhood...</td>\n",
+       "      <td>this charming 4 bedroom, 2.5 bathroom house in...</td>\n",
+       "      <td>[0.0067040585, 0.006078434, -0.0076392023, -0....</td>\n",
+       "      <td>1554.761963</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  neighborhood_name property_type     price         size  num_bedrooms  \\\n",
+       "0      willow creek         house  $350,000  2,000 sq ft             4   \n",
+       "\n",
+       "   num_bathrooms                                        description  \\\n",
+       "0            2.5  this charming 4 bedroom, 2.5 bathroom house in...   \n",
+       "\n",
+       "                            neighborhood_description  \\\n",
+       "0  willow creek is a family-friendly neighborhood...   \n",
+       "\n",
+       "                                combined_description  \\\n",
+       "0  this charming 4 bedroom, 2.5 bathroom house in...   \n",
+       "\n",
+       "                                      ada_embeddings    _distance  \n",
+       "0  [0.0067040585, 0.006078434, -0.0076392023, -0....  1554.761963  "
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table.search(query).limit(1).to_pandas()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1f92d6c7-1bdf-4fbf-86f4-d90a786386f9",
    "metadata": {},
@@ -637,10 +733,8 @@
    "id": "ddef4702-eeb6-477e-9fa0-2c43067262a6",
    "metadata": {},
    "source": [
-    "## Step 2: Store listings in a vector database\n",
-    "## Step 3: Build a user interface to collect buyer preferences\n",
-    "## Step 4: Search listings based on buyer's preference\n",
-    "## Step 5: Alter the retrieved listing's description with the buyer's preferences"
+    "## Step 5: Search listings based on buyer's preference\n",
+    "## Step 6: Alter the retrieved listing's description with the buyer's preferences"
    ]
   },
   {
